--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "Lorianne",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.7",
+    "nodemon": "^2.0.2",
     "pug": "^2.0.4"
   }
 }
